@@ -1,5 +1,9 @@
 2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-start.el (gnus-activate-group): Take an optional parameter to
+	say that you don't want to call gnus-request-group with don-check, but
+	do check the reponse.  This is for virtual groups only.
+
 	* nnimap.el (nnimap-request-list): Servers may return \NoSelect
 	case-insensitively.
 	(nnimap-debug): Removed.
